--- a/src/app/person-form/person-form.component.html
+++ b/src/app/person-form/person-form.component.html
@@ -71,7 +71,7 @@
 
         <div class="mb-5"></div> 
         <div class="text-center">
-            <button class="btn btn-dark" type="submit" [disabled]="personForm.invalid">Küld</button>
+            <button class="btn btn-success" type="submit" [disabled]="personForm.invalid">Küld</button>
         </div>
     </form>
 </div>
